<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal"
    tools:context=".activities.HomeActivity">

    <!-- Welcome message - can be added if desired -->
    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        tools:text="Welcome, Student Name!"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

    <Button
        android:id="@+id/buttonDiscussions"
        style="@style/Widget.Purpleboard.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/discussions_page_button"
        android:drawableStart="@drawable/ic_discussions"
        android:drawablePadding="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:gravity="start|center_vertical"/>

    <Button
        android:id="@+id/buttonAssignments"
        style="@style/Widget.Purpleboard.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/assignments_page_button"
        android:drawableStart="@drawable/ic_assignments"
        android:drawablePadding="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:gravity="start|center_vertical"/>

    <Button
        android:id="@+id/buttonLeaderboards"
        style="@style/Widget.Purpleboard.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/leaderboards_page_button"
        android:drawableStart="@drawable/ic_leaderboard"
        android:drawablePadding="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:gravity="start|center_vertical"/>

    <Button
        android:id="@+id/buttonProfile"
        style="@style/Widget.Purpleboard.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/profile_page_button"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:gravity="start|center_vertical"/>

    <!-- Spacer to push logout button to bottom -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonLogout"
        style="@style/Widget.Purpleboard.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/logout_button"
        android:textColor="@color/app_red_error"
        android:drawableStart="@drawable/ic_logout"
        android:drawableTint="@color/app_red_error"
        android:drawablePadding="8dp"/>

</LinearLayout>